[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/kotlin/tools/KotlinTools.gd" type="Script" id=1]

[node name="KotlinToolMenuItem" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -307.0
margin_top = -176.0
margin_right = 93.0
margin_bottom = -48.0
window_title = "Kotlin Tools"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
buildTypeSelectorPath = NodePath("ActionsContainer/HBoxContainer/BuildTypeButton")

[node name="SetupContainer" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="SetupContainer"]
margin_top = 4.0
margin_right = 384.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 80 )
text = "Add Kotlin support for this Godot project.

This will download the Kotlin template and extract it in place."

[node name="CenterContainer" type="CenterContainer" parent="SetupContainer"]
margin_top = 88.0
margin_right = 384.0
margin_bottom = 108.0

[node name="AddSupportButton" type="Button" parent="SetupContainer/CenterContainer"]
margin_left = 126.0
margin_right = 257.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Add Kotlin Support"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="ActionsContainer"]
margin_right = 186.0
margin_bottom = 112.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ActionsContainer/HBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Build Kotlin Scripts:"

[node name="BuildTypeButton" type="OptionButton" parent="ActionsContainer/HBoxContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 38.0
text = "debug"
items = [ "debug", null, false, 0, null, "release", null, false, 1, null ]
selected = 0

[node name="BuildButton" type="Button" parent="ActionsContainer/HBoxContainer"]
margin_top = 42.0
margin_right = 186.0
margin_bottom = 62.0
text = "Build Kotlin"

[node name="VSeparator" type="VSeparator" parent="ActionsContainer"]
margin_left = 190.0
margin_right = 194.0
margin_bottom = 112.0

[node name="HBoxContainer2" type="VBoxContainer" parent="ActionsContainer"]
margin_left = 198.0
margin_right = 384.0
margin_bottom = 112.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ActionsContainer/HBoxContainer2"]
margin_right = 186.0
margin_bottom = 14.0
text = "Config:"

[node name="ConfigGradleButton" type="Button" parent="ActionsContainer/HBoxContainer2"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 38.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Config Gradle"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="." to="." method="_on_KotlinToolMenuItem_about_to_show"]
[connection signal="pressed" from="SetupContainer/CenterContainer/AddSupportButton" to="." method="_on_AddSupportButton_pressed"]
[connection signal="item_selected" from="ActionsContainer/HBoxContainer/BuildTypeButton" to="." method="_on_BuildTypeButton_item_selected"]
[connection signal="pressed" from="ActionsContainer/HBoxContainer/BuildButton" to="." method="_on_BuildButton_pressed"]
[connection signal="pressed" from="ActionsContainer/HBoxContainer2/ConfigGradleButton" to="." method="_on_ConfigGradleButton_pressed"]
